--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -63,6 +63,12 @@ svg {
   .elc-container {
     display: none;
   }
+  .portfolio-text {
+    display: none;
+  }
+  .gradient-bg-3 {
+    display: none;
+  }
 }
 .elc-reveal {
   margin: 0 20px;
@@ -385,11 +391,17 @@ svg {
   .gradient-bg-3 {
     display: none;
   }
+  .portfolio-text {
+    display: none;
+  }
 }
 
 /* IPHONE */
 @media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
   .gradient-bg-3 {
+    display: none;
+  }
+  .portfolio-text {
     display: none;
   }
 }
@@ -399,49 +411,7 @@ svg {
   .gradient-bg-3 {
     display: none;
   }
-}
-
-/* MOBILE MENU OPENER BUTTON */
-.ham {
-  cursor: pointer;
-  -webkit-tap-highlight-color: transparent;
-  transition: transform 400ms;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.hamRotate.active {
-  transform: rotate(45deg);
-}
-.line {
-  fill: none;
-  transition: stroke-dasharray 200ms, stroke-dashoffset 200ms;
-  /* TODO: Add hover styles */
-  stroke: var(--text-small-color);
-  stroke-width: 5.5;
-  stroke-linecap: round;
-}
-
-.ham8 .top {
-  stroke-dasharray: 40 160;
-}
-.ham8 .middle {
-  stroke-dasharray: 40 142;
-  transform-origin: 50%;
-  transition: transform 200ms;
-}
-.ham8 .bottom {
-  stroke-dasharray: 40 85;
-  transform-origin: 50%;
-  transition: transform 200ms, stroke-dashoffset 200ms;
-}
-.ham8.active .top {
-  stroke-dashoffset: -64px;
-}
-.ham8.active .middle {
-  transform: rotate(90deg);
-}
-.ham8.active .bottom {
-  stroke-dashoffset: -64px;
+  .portfolio-text {
+    display: none;
+  }
 }
